# tuneBfree

./: .gitignore  .gitmodules  Makefile  README.md  common.mak  guide.md
.github/workflows/: build.yml  checks.yml
b_overdrive/: filterTools.cpp  jboverdrive.cpp  lv2.cpp  overdrive.cpp  overdrive.h  overmaker.cpp  ovt_biased.cpp  ovt_quadratic.cpp
b_reverb/: Makefile  lv2.cpp  reverb.cpp
b_synth/: Makefile  b_synth.ttl.in  lv2.cpp  ui.c  ui.cpp
b_synth/textures/: bg_left_ctrl.cpp  bg_leslie_drum.cpp  bg_leslie_horn.cpp  bg_right_ctrl.cpp  btn_overdrive.cpp  btn_perc.cpp  btn_perc_decay.cpp  btn_perc_harmonic.cpp  btn_perc_volume.cpp  btn_vibl.cpp  btn_vibu.cpp  dial.cpp  drawbar.cpp  help_screen_image.cpp  ui_button_image.cpp  ui_proc_image.cpp  uim_background.cpp  uim_cable1.cpp  uim_cable2.cpp  uim_caps.cpp  uim_transformer.cpp  uim_tube1.cpp  uim_tube2.cpp  wood.cpp
b_whirl/: Makefile  lv2.cpp  whirl.cpp
b_whirl/gui/: b_whirl.cpp
build_scripts/: build.sh  build_in_container.sh  build_linux.sh  build_mac.sh
pugl/: pugl_win.cpp  pugl_x11.cpp
robtk/: gpg_check.cpp  gpg_init.cpp  jackwrap.cpp  ui_gl.cpp
robtk/gl/: xternalui.cpp
robtk/weakjack/: weak_libjack.cpp
src/: CMakeLists.txt  Makefile  cfgParser.cpp  clap.cpp  global_inst.h  gui_plumbing.cpp  gui_w32.cpp  gui_x11.cpp  libMTSClient.cpp  main.c  main.cpp  main.h  memstream.cpp  midi.cpp  midi.h  midi_aseq.cpp  midnam.cpp  overdrive.cpp  overdrive.h  pgmParser.cpp  program.cpp  reverb.cpp  reverb.h  state.cpp  tonegen.c  tonegen.cpp  tonegen.h  tuning.cpp  tuning.h  vibrato.cpp  vibrato.h  whirl.cpp  whirl.h
tests/: test_basic.py  test_mtsesp.py  test_regression.py  test_tuneBfree.py
tests/regression_test_data/12TET/: osc.txt  osc_cfglists.txt  osc_runtime.txt
tests/regression_test_data/19TET/: osc.txt  osc_cfglists.txt  osc_runtime.txt
tests/regression_test_data/5TET/: osc.txt  osc_cfglists.txt  osc_runtime.txt
tests/regression_test_data/bagpipe4/: osc.txt  osc_cfglists.txt  osc_runtime.txt
tests/regression_test_data/duodene/: osc.txt  osc_cfglists.txt  osc_runtime.txt
tests/regression_test_data/p4/: osc.txt  osc_cfglists.txt  osc_runtime.txt
ui/: Makefile
